Grease Pencil: The "Show Fill Color While Drawing" toolsetting does not do anything #120436

Closed
opened 2024-04-09 16:48:08 +02:00 by Falk David · 1 comment
Member

System Information
Operating system: Linux-6.5.0-10027-tuxedo-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: 40a5e739e270
Worked: ?

Short description of error
The tool setting "Show Fill Color While Drawing" does not do anything.
image

Exact steps for others to reproduce the error

  1. Open the 2D Animation Template
  2. Switch the material in the tool settings to the "Solid Fill"
  3. Make sure the "Strength" is set to 1.0.
  4. Disable the "Show Fill Color While Drawing" option under "Cursor".
  5. Fills are still shown while drawing
**System Information** Operating system: Linux-6.5.0-10027-tuxedo-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` Worked: ? **Short description of error** The tool setting "Show Fill Color While Drawing" does not do anything. ![image](/attachments/76e0c915-da5b-43f5-9d3e-3064c3596142) **Exact steps for others to reproduce the error** 1. Open the 2D Animation Template 2. Switch the material in the tool settings to the "Solid Fill" 3. Make sure the "Strength" is set to 1.0. 4. Disable the "Show Fill Color While Drawing" option under "Cursor". 5. Fills are still shown while drawing
Falk David added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-09 16:48:09 +02:00
Falk David added this to the Grease Pencil project 2024-04-09 16:48:11 +02:00
Author
Member

In the code, the RNA brush setting is called show_lasso. The flag it maps to is GP_BRUSH_DISSABLE_LASSO. This is never used anywhere in the code.

In the code, the RNA brush setting is called `show_lasso`. The flag it maps to is `GP_BRUSH_DISSABLE_LASSO`. This is never used anywhere in the code.
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2024-04-09 17:59:32 +02:00
Germano Cavalcante added the
Module
Grease Pencil
label 2024-04-09 18:23:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120436
No description provided.