Fix #120436: "Show Fill Color" setting not working

The flag was completly unused in the code.
Now this flag does what it says: While drawing,
the fill color is (almost) not visible.

Pull Request: https://projects.blender.org/blender/blender/pulls/120438